--- a/es/editor/hotkeys.html
+++ b/es/editor/hotkeys.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Hotkeys</title>
+  <title>Atajos Combinados</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,7 +37,7 @@ Sanny Builder soporta muchos atajos comunes para las operaciones de archivo y te
 </tr>
 <tr>
 <td>`F8` *</td>
-<td>ejecutar el juego para el [modo de edición](../../edit-modes/README.md) actual</td>
+<td>ejecutar el juego para el [modo de edición](../edit-modes/README.md) actual</td>
 </tr>
 <tr>
 <td>`F10`</td>
@@ -153,51 +153,51 @@ Sanny Builder soporta muchos atajos comunes para las operaciones de archivo y te
 </tr>
 <tr>
 <td>`Ctrl` + `Shift` + `E` *</td>
-<td>insert the <a href="features.md#player-coordinates-management">player's z_angle</a></td>
+<td>inserta el [angulo Z del jugador](features.md#player-coordinates-management)</td>
 </tr>
 <tr>
 <td>`F1`</td>
-<td>find an opcode with the word under the cursor (with ignoring of `_` and `.`)</td>
+<td>encuentre un opcode con la palabra debajo del cursor (ignorando `_` y `.`)</td>
 </tr>
 <tr>
 <td>`Ctrl` + `F1`</td>
-<td>find an opcode with the word under the cursor (without ignoring of `_` and `.`)</td>
+<td>encuentre un opcode con la palabra debajo del cursor (sin ignorar `_` y `.`)</td>
 </tr>
 <tr>
 <td>`F2`</td>
-<td>use the word under the cursor to expand to the <a href="../../edit-modes/code-templates.md">code template</a> with the same name</td>
+<td>use la palabra debajo del cursor para expandirse a la [plantilla de código] (../edit-modes/code-templates.md) con el mismo nombre</td>
 </tr>
 <tr>
 <td>`Ctrl` + `J`</td>
-<td>show the list of <a href="../../edit-modes/code-templates.md">code templates</a></td>
+<td>mostrar la lista de [plantillas de código](../edit-modes/code-templates.md)</td>
 </tr>
 <tr>
 <td>`Ctrl` + `M`</td>
-<td>start/stop recording of a <a href="features.md#keypress-recording-macro">macro </a>(keystroke pressings sequence)</td>
+<td>iniciar/detener la grabación de una [macro](features.md#keypress-recording-macro)(secuencia de pulsaciones de teclas)</td>
 </tr>
 <tr>
 <td>`Ctrl` + `P`</td>
-<td>replay <a href="features.md#keypress-recording-macro">macro</a>/pause while processing</td>
+<td>reproducir/pausar [macro](features.md#keypress-recording-macro) mientras se procesa</td>
 </tr>
 <tr>
 <td>`Ctrl` + `H` *</td>
-<td>convert the number under the cursor from decimal to hexadecimal and vice versa</td>
+<td>convertir el número debajo del cursor de decimal a hexadecimal y viceversa</td>
 </tr>
 <tr>
 <td>`Ctrl` + `Alt` + `H` *</td>
-<td>convert the model name under the cursor to its numeric ID and vice versa</td>
+<td>convertir el nombre del modelo bajo el cursor a su ID numérico y viceversa</td>
 </tr>
 <tr>
-<td>**Misc**</td>
+<td>**Varios**</td>
 <td></td>
 </tr>
 <tr>
 <td>`Ctrl` + `Ñ`</td>
-<td>open <a href="console.md">console</a></td>
+<td>abrir la [consola](console.md)</td>
 </tr>
 <tr>
 <td>`Alt` + `S`</td>
-<td>(when the list of models is active) re-sort the list</td>
+<td>(cuando la lista de modelos está activa) reordenar la lista</td>
 </tr>
 </tbody>
 </table>
