--- a/es/editor/options/README.html
+++ b/es/editor/options/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Options</title>
+  <title>Preferencias</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +9,6 @@
 </head>
 <body>
 
-The options window is shown when you press `F10`. This window is divided into five tabs, each of them contains certain kind of settings. By default the [general settings](general.md) tab is open.
+La ventana de Preferencia se muestra cuando presiona `F10`. Esta ventana está dividida en cinco pestañas, cada una de ellas contiene cierto tipo de configuración. De forma predeterminada, la pestaña [Preferencia general](general.md) es abierta.
 
 <script src="../../../js/main.min.js"></script>
