--- a/es/editor/options/editor.html
+++ b/es/editor/options/editor.html
@@ -9,52 +9,52 @@
 </head>
 <body>
 
-Here you can change the IDE settings.
+Aquí puede cambiar la configuración del IDE.
 
 :::l
 ![](../../img/options-editor-en.png)
 :::
 
-## Color Theme
+## Tema de Color
 
 :::l
 ![](../../img/sb-options-color-theme.png)
 :::
 
-This picker allows to choose one of the pre-defined themes to customize interface colors and syntax highlighting. The Edit button launches [Theme Editor](theme-editor.md).
+Este selector permite elegir uno de los temas predefinidos para personalizar los colores de la interfaz y resaltar la sintaxis. El botón Editar inicia [Editor de Temas](theme-editor.md).
 
-## Code Scan Distance
+## Distancia de Escaneo de código
 
 :::l
 ![](../../img/editor-code-scan-en.png)
 :::
 
-The code scanning range is used when you press `Ctrl+Space` to find [constants](../../coding/constants.md), labels and [variables](../../coding/variables.md). The value tells the editor how many lines to scan up and down starting from the active line. If you set a number of `0`, the editor scans the whole source file.
+El rango de escaneo de código se usa cuando presiona `Ctrl+Espacio` para encontrar [constantes](../../coding/constants.md), etiquetas y [variables](../../coding/variables.md ). El valor le dice al editor cuántas líneas escanear hacia arriba y hacia abajo a partir de la línea activa. Si establece un número de `0`, el editor escanea todo el archivo fuente.
 
-If the `Auto list` option is checked, the list of available labels, models and variables appears automatically as you type `@`, `$`, `#`.
+Si la opción `Lista automática` está marcada, la lista de etiquetas, modelos y variables disponibles aparece automáticamente a medida que escribe `@`, `$`, `#`.
 
-## Font
+## Fuente
 
 :::l
 ![](../../img/editor-font-en.png)
 :::
 
-Here you can choose the font and configure its display. Sanny Builder supports only [monospaced fonts](https://en.wikipedia.org/wiki/Monospaced_font). `AaBbCcDd` reflects selected configuration.
+Aquí puede elegir la fuente y configurar su visualización. Sanny Builder solo admite [fuentes monoespaciadas](https://en.wikipedia.org/wiki/Monospaced_font). `AaBbCcDd` refleja la configuración seleccionada.
 
-## Editor Configuration
+## Configuración del Editor
 
 :::l
 ![](../../img/sb-editor-configuration.png)
 :::
 
-`Show main panel` – toggle the top toolbar\
-`Show opcode info` – make the editor display [different information](../features.md#displaying-information-about-opcode) in the bottom bar\
-`Line numbers` – display line numbers in the left padding area\
-`Show gutter border` – display the border line on the right side of the left padding area. Uncheck this option to increase the available space visually\
-`Load last closed file at startup` – open the last closed file at startup\
-`Load all closed files` – open all closed files at startup. This option is only available when the Load last closed file at startup is checked\
-`Confirm when exit` – confirm exit to prevent occasional program termination\
-`Enable language service` - toggle the [language service](../language-service.md). Disabling this service also makes the semantinc contants highlighting unavailable. Does not affect a document that is already opened in the editor\
-`Semantic highlighting` - apply the same rules to constants as to their values. The color theme's rules for constant highlighting will be ignored.
+`Mostrar panel principal` – cambiar la barra de herramientas superior\
+`Mostrar información de opcodes` – hacer que el editor muestre [diferente información](../features.md#displaying-information-about-opcode) en la barra inferior\
+`Números de linea` – muestra los números de línea en el área de relleno izquierda\
+`Mostrar borde del canalón` – mostrar la línea de borde en el lado derecho del área de relleno izquierda. Desmarca esta opción para aumentar visualmente el espacio disponible\
+`Cargar el último archivo cerrado al iniciar` – abrir el último archivo cerrado al inicio\
+`Cargar todos los archivos cerrados` – abre todos los archivos cerrados al inicio. Esta opción solo está disponible cuando la opción Cargar el último archivo cerrado al iniciar\
+`Confirmar cuando exista` – confirmar la salida para evitar la terminación ocasional del programa\
+`Habilitar servicio del lenguaje` - cambie el [servicio de idioma](../language-service.md). Deshabilitar este servicio también hace que el resaltado de contenido semántico no esté disponible. No afecta a un documento que ya está abierto en el editor\
+`Resaltador semantico` - se aplican las mismas reglas a las constantes que a sus valores. Se ignorarán las reglas del tema de color para el resaltado constante..
 
 <script src="../../../js/main.min.js"></script>
