--- a/es/editor/language-service.html
+++ b/es/editor/language-service.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Language Service</title>
+  <title>Servicio de Lenguajes</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,31 +9,31 @@
 </head>
 <body>
 
-**Language service** is one of the Sanny Builder features providing rich developer experience. It's responsible for continuous mining data out of the opened document and all imported files. It's important to know that the mining works in a separate thread and does not immediately reflect what you've just typed. There could be a noticeable delay while the language service reacts on a document change. If, for some reason, it distracts you, or you're not satisfied with the service performance you can disable it in the [options](options/editor.md#editor-configuration).
+**El servicio de lenguajes** es una de las características de Sanny Builder que brinda una rica experiencia de desarrollador. Es responsable de la extracción continua de datos del documento abierto y todos los archivos importados. Es importante saber que la minería funciona en un subproceso separado y no refleja de inmediato lo que acaba de escribir. Podría haber un retraso notable mientras el servicio de lenguajes reacciona ante un cambio en el documento. Si por algún motivo te distrae o no estás satisfecho con el rendimiento del servicio, puedes desactivarlo en las [opciones](options/editor.md#editor-configuration).
 
-For better responsiveness the language service only scans a slice of the current document prior to the active line, not the entire file. This is controlled by the [Scanning range](options/editor.md#code-scan-distance) value set in the Editor options. The higher the value the more lines the service scans and the more symbols it finds, but it also increases the time that is necessary for the editor to reflect the changes made in the document. If you have a less powerful workstation consider using the default value of `250` lines.
+Para una mejor capacidad de respuesta, el servicio de lenguajes solo escanea una porción del documento actual antes de la línea activa, no el archivo completo. Esto está controlado por el valor [Rango de escaneo](options/editor.md#code-scan-distance) establecido en las opciones del Editor. Cuanto mayor sea el valor, más líneas escanea el servicio y más símbolos encuentra, pero también aumenta el tiempo necesario para que el editor refleje los cambios realizados en el documento. Si tiene una estación de trabajo menos poderosa, considere usar el valor predeterminado de `250` líneas.
 
-Since v3.7.0 the language service is capable of finding [defined constants](../coding/constants.md#syntax) and their values. This information then becomes available to the editor for [highlighting purposes](options/editor.md#color-theme) and for [displaying values](features.md#displaying-information-about-opcode) of constants.
+Desde v3.7.0, el servicio de lenguaje es capaz de encontrar [constantes definidas](coding/constants.md#syntax) y sus valores. Esta información luego está disponible para el editor para [resaltar](options/editor.md#color-theme) y para [mostrar valores](features.md#displaying-information-about-opcode) de constantes.
 
 ```sb3
 const
     x = 10
 end
 
-x // x gets highlighted
+x // x queda resaltada
 ```
 
-The syntax highlighter offers two ways of colorizing constants:
+El resaltador de sintaxis ofrece dos formas de colorear las constantes:
 
-* highlight all constants using the same set of rules
-* apply the rules that would otherwise be applied to the constant value ("semantic highlighting")
+* resaltar todas las constantes usando el mismo conjunto de reglas
+* aplicar las reglas que de otro modo se aplicarían al valor constante ("resaltado semántico")
 
-With semantic highlighting enabled and given the example above `x` would get colorized as a regular number (the maroon color by default).
+Con el resaltado semántico habilitado y dado el ejemplo anterior, `x` se colorearía como un número normal (el color granate por defecto).
 
-The language service also serves as the data provider for the autocomplete feature when you press `Ctrl+Space`. It renders a list of constants and their values. When the language service is disabled, no constants are being displayed in the list.
+El servicio de idioma también sirve como proveedor de datos para la función de autocompletar cuando presiona `Ctrl+Espacio`. Muestra una lista de constantes y sus valores. Cuando el servicio de idioma está deshabilitado, no se muestran constantes en la lista.
 
 {% hint style="info" %}
-Read more technical details on the service implementation there:
+Lee más detalles técnicos sobre la implementación del servicio aquí:
 
 * [Notes on constants highlighting. Part 1/2](https://www.patreon.com/posts/45844911)
 * [Notes on constants highlighting. Part 2/2](https://www.patreon.com/posts/46873773)
