--- a/es/editor/opcode-search-tool.html
+++ b/es/editor/opcode-search-tool.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Opcode Search Tool</title>
+  <title>Buscador de Opcodes</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,115 +9,116 @@
 </head>
 <body>
 
-You can call this tool by pressing `Ctrl+Alt+2` or by selecting the menu item: `Tools->IDE Tools->Opcode Search`.
+Puede llamar a esta herramienta presionando `Ctrl+Alt+2` o seleccionando el elemento del menú: `Herramientas->Herramientas del IDE->Buscador de Opcodes`.
 
-:::center
+:::c
 ![](../img/ost.png)
 :::
 
-To find an opcode, type some words in the input line, e.g. `actor car`. The tool displays the opcodes with these words. You can also use special search operators.
+Para encontrar un opcode, escriba algunas palabras en la línea de entrada, p. `actor car`. La herramienta muestra los opcodes con estas palabras. También puede utilizar operadores de búsqueda especiales.
 
-When the tool is open, it checks if there is a selected word in the editor. If the selected word is found, it will be copied into the search field.
+Cuando la herramienta está abierta, comprueba si hay una palabra seleccionada en el editor. Si se encuentra la palabra seleccionada, se copiará en el campo de búsqueda.
 
-## Copying Results
+## Copiar Resultados
 
-To copy an opcode into clipboard, select it in the list and press `Enter`. \
-To add another opcode to the clipboard content press `Shift+Enter`. \
-To copy the entire results list press `F2`.
+Para copiar un opcode en el portapapeles, selecciónelo en la lista y presione `Enter`.\
+Para agregar otro opcode al contenido del portapapeles, presione `Shift+Enter`.\
+Para copiar toda la lista de resultados, presione `F2`.
 
-## Hotkeys
+## Atajos Combinados
 
-`Enter` copy selected opcode onto clipboard\
-`Shift+Enter` add selected opcode to the clipboard\
-`F1` - show help information\
-`F2` - copy all opcodes from the results list into clipboard\
-`F3` - sort the list by opcodes\
-`F4` - sort the list alphabetically\
-`F11` - clear the search field, display all opcodes\
-`ESC` - close the tool window
+`Enter` copia el opcode seleccionado en el portapapeles\
+`Shift+Enter` añade el opcode seleccionado al portapapeles\
+`F1` - mostrar información de ayuda\
+`F2` - copia todos los opcodes de la lista de resultados en el portapapeles\
+`F3` - ordenar la lista por opcodes\
+`F4` - ordena la lista alfabéticamente\
+`F11` - borra el campo de búsqueda, muestra todos los opcodes\
+`ESC` - cerrar la ventana de herramientas
 
-## Search Queries
+## Consultas de Búsqueda
 
-### AND operator
+### Operador AND
 
-A single space between words serves as the `AND` operator:
+Un solo espacio entre palabras sirve como el operador `AND`:
 
 ```
 @ player
 ```
 
-Finds all opcodes with both `@` and the word `player`.
+Encuentra todos los opcodes con `@` y la palabra `player`.
 
-### OR operator
+### Operador OR
 
-The pipe character `|` is the `OR` operator:
+El carácter vertical `|` es el operador `OR`:
 
 ```
 @ | player
 ```
 
-Finds all opcodes with either `@` or `player`.
+Encuentra todos los opcodes con `@` o `player`.
 
-If you write `|` as the first character in the search, the tool will connect all the following words with the OR operator.
+Si escribe `|` como primer carácter en la búsqueda, la herramienta conectará todas las siguientes palabras con el operador OR.
 
-``` | actor player car
+```
+| actor player car
 ```
 
-Finds opcodes with either `actor`, `player` or `car`.
+Encuentra opcodes con `actor`, `player` o `car`.
 
-### NOT operator
+### Operador NOT
 
-Two dashes before the word exclude opcodes with this word from the result:
+Dos guiones antes de la palabra excluyen los opcodes con esta palabra del resultado:
 
 ```
 car --actor
 ```
 
-Finds opcodes with `car` but without `actor`.
+Encuentra opcodes con `car` pero sin `actor`.
 
-A single dash can be used before identifiers or `$` and `@` characters, but not numbers:
+Se puede usar un solo guión antes de los identificadores o los caracteres `$` y `@`, pero no los números:
 
 ```
 -10 -@ -car ---1
 ```
 
-Finds opcodes with the number `-10` and without `@`, `car` and `-1`
+Encuentra opcodes con el número `-10` y sin `@`, `car` y `-1`
 
-### Search in conditional opcodes 
+### Buscar en opcodes condicionales
 
-`^` - shows only conditional opcodes \
-`^word` - finds `word` in the conditional opcodes:
+`^` - muestra solo opcodes condicionales\
+`^word` - encuentra `palabra` en los opcodes condicionales:
 
 ```
 ^car ==
 ```
 
-Finds all conditional opcodes with `car` and `==`.
+Encuentra todos los opcodes condicionales con `car` y `==`.
 
-`-^` - excludes all conditional opcodes from the list:
+`-^` - excluye todos los opcodes condicionales de la lista.:
 
 ```
 player -^
 ```
 
-Finds all non-conditional opcodes with `player`.
+Encuentra todos los opcodes no condicionales con `player`.
 
-`-^word` - excludes the conditional opcodes with `word`:
+`-^word` - excluye los opcodes condicionales con `word`:
 
 ```
 player -^actor
 ```
 
-Finds opcodes with `player`, with the exception of the conditional opcodes with `actor`.
+Encuentra opcodes con `player`, con la excepción de los opcodes condicionales con `actor`.
 
-### Respect the order of the words
+### Respeta el orden de las palabras.
 
-`%` - finds opcodes with the words in the given order:
+`%` - encuentra opcodes con las palabras en el orden dado:
 
 ```
 % @ = @
 ```
 
-Finds opcodes where `@` `=` `@` follow each other (possibly with other words in between).
+Encuentra opcodes donde `@` `=` `@` se suceden (posiblemente con otras palabras en medio).
 
 <script src="../../js/main.min.js"></script>
