--- a/en/editor/options/formats.html
+++ b/en/editor/options/formats.html
@@ -23,18 +23,18 @@ Formats for files produced by the disassembler or the compiler.
 ![](../../img/formats-files-en.png)
 :::
 
-The top field contains the full path and name of a text file created during disassembling. Two fields below contain the path and the name of binary files `SCM` and `IMG` (if the [edit mode](../../../edit-modes/README.md) is `GTA SA`) created during compilation. All fields share the same syntax. They also may use special words representing parts of the source file name:
-
-`$dir` – the file path \
-`$name` – the file name \
-`$ext` – the file extension
-
-E.g. if you disassemble the file `C:\MyDir\main.scm`, then
-
-`$dir` is `C:\MyDir` \
-`$name` is `main` \
-`$ext` is `.scm` 
-
+The top field contains the full path and name of a text file created during disassembling. Two fields below contain the path and the name of binary files `SCM` and `IMG` (if the [edit mode](../../../edit-modes/README.md) is `GTA SA`) created during compilation. All fields share the same syntax. They also may use special words representing parts of the source file name:\
+\
+`$dir` – the file path\
+`$name` – the file name\
+`$ext` – the file extension\
+\
+E.g. if you disassemble the file `C:\MyDir\main.scm`, then\
+\
+`$dir` is `C:\MyDir`\
+`$name` is `main`\
+`$ext` is `.scm`\
+\
 If the format is `$dir\$name.txt`, the output file is named `C:\MyDir\main.txt`.
 
 ## Label Name Format
