--- a/es/editor/hotkeys.html
+++ b/es/editor/hotkeys.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Atajos Combinados</title>
+  <title>Atajos del Teclado</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,13 +14,13 @@ Sanny Builder soporta muchos atajos comunes para las operaciones de archivo y te
 <table>
 <thead>
 <tr>
-<th>Tecla/Combo</th>
+<th>Tecla/Combinación</th>
 <th>Operación</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>**Menu Principal**</td>
+<td>**Menú Principal**</td>
 <td></td>
 </tr>
 <tr>
