--- a/es/editor/options/general.html
+++ b/es/editor/options/general.html
@@ -9,107 +9,105 @@
 </head>
 <body>
 
-This tab contains the general settings used by Sanny Builder.
+Esta pestaña contiene la configuración general utilizada por Sanny Builder.
 
 :::l
 ![](../../img/options-general-en.png)
 :::
 
-
-
-## Game Directory
+## Directorio del Juego
 
 :::l
 ![](../../img/main_dir.png)
 :::
 
-Sanny Builder needs certain game files while working, so you have to choose a correct directory where the game for the current edit mode is installed. You may input the path manually or by selecting the directory via the dialog appearing when you press the button.
+Sanny Builder necesita ciertos archivos del juego mientras trabaja, por lo que debe elegir un directorio correcto donde está instalado el juego para el modo de edición actual. Puede ingresar la ruta manualmente o seleccionando el directorio a través del cuadro de diálogo que aparece cuando presiona el botón.
 
-## Interface Language
+## Idioma de la Interfaz
 
 :::l
 ![](../../img/general-language-en.png)
 :::
 
-List of available translations for Sanny Builder. Select a language to update the program interface. 
+Lista de traducciones disponibles para Sanny Builder. Seleccione un idioma para actualizar la interfaz del programa.
 
-Translation files are located in the `lang` folder. More information on how to create a new translation or update the existing one can be found at [sannybuilder/translations](https://github.com/sannybuilder/translations).
+Los archivos de traducción se encuentran en la carpeta `lang`. Puede encontrar más información sobre cómo crear una nueva traducción o actualizar la existente en [sannybuilder/translations](https://github.com/sannybuilder/translations).
 
-## File Association
+## Asociación de Archivos
 
 :::l
 ![](../../img/sb-options-associate.png)
 :::
 
-You may associate different file extensions with Sanny Builder. When a checkbox is selected, your Windows Registry is changed and you may open the files with this extension simply by clicking it. To remove the association, unselect the checkbox.
+Puede asociar diferentes extensiones de archivo con Sanny Builder. Cuando se selecciona una casilla de verificación, su Registro de Windows cambia y puede abrir los archivos con esta extensión simplemente haciendo clic en él. Para eliminar la asociación, anule la selección de la casilla de verificación.
 
-## Core Settings
+## Configuraciones Principales
 
 :::l
 ![](../../img/main_opt.png)
 :::
 
-### Always overwrite output file
+### Sobrescribir Siempre el Archivo de Salida
 
-This option determines how the disassembler treats the output file when a file with the same name exists already. By default the disassembler keeps the existing file and creates a new one with the extra number in the name (e.g. `main[0].txt`). 
+Esta opción determina cómo el desensamblador trata el archivo de salida cuando ya existe un archivo con el mismo nombre. De manera predeterminada, el desensamblador conserva el archivo existente y crea uno nuevo con el número adicional en el nombre (p. ej. `main[0].txt`).
 
-When this option is checked the disassembler replaces the existing file with a new file.
+Cuando esta opción está marcada, el desensamblador reemplaza el archivo existente con un nuevo archivo.
 
-### Show progress
+### Mostrar Progreso
 
-Display a live progress bar during disassembling or compilation. Showing the progress slightly slows the execution time. When this option is turned off the status bar displays the words: `Please wait`. 
+Muestra una barra de progreso en vivo durante el desmontaje o la compilación. Mostrar el progreso ralentiza ligeramente el tiempo de ejecución. Cuando esta opción está desactivada, la barra de estado muestra las palabras: `Por favor, espere`.
 
-### Show report
+### Mostrar Reporte
 
-Displays a popup window with various information about the compiled file.
+Muestra una ventana emergente con diversa información sobre el archivo compilado.
 
-### Show warning
+### Mostrar Alerta
 
-This option is only used during compilation of the San Andreas scripts. If the game is running, the file `script.img` containing external scripts can not be overwritten as the game uses this file and the compiler complains about it. You may disable the warning by unchecking this box.
+Esta opción solo se usa durante la compilación de los scripts de San Andreas. Si el juego se está ejecutando, el archivo `script.img` que contiene scripts externos no se puede sobrescribir ya que el juego usa este archivo y el compilador se queja al respecto. Puede desactivar la alerta desmarcando esta casilla.
 
-### Manual IMG opening
+### Abrir IMG Manualmente
 
-When the disassembling process starts, the program searches the file `script.img` containing some game scripts. If this file is not present in the same folder with the `.SCM` file or in the `San Andreas\data\scripts` folder, the error message is displayed. If this option is enabled, a file select dialog appears and you can provide another `script.img` file manually.
+Cuando comienza el proceso de desmontaje, el programa busca en el archivo `script.img` que contiene algunos scripts de juegos. Si este archivo no está presente en la misma carpeta con el archivo `.SCM` o en la carpeta `San Andreas\data\scripts`, se muestra el mensaje de error. Si esta opción está habilitada, aparece un cuadro de diálogo de selección de archivo y puede proporcionar otro archivo `script.img` manualmente.
 
-### Quick game loading
+### Cargar Juego Rápidamente
 
-With this option Sanny Builder skips the startup splash screens when launching San Andreas (`F8`). If this feature does not work with your game version, disable this option.
+Con esta opción, Sanny Builder omite las pantallas de inicio al iniciar San Andreas (`F8`). Si esta función no funciona con la versión de su juego, deshabilite esta opción.
 
-### Check conditions
+### Chequeo de Condiciones
 
-This option has two meanings. First, the program replaces the [number of conditions](../../coding/conditions.md#syntax) in the `IF` opcode with `AND` or `OR`. Second, the program is able to compile the `IF..END` construct, and calculate needed `IF` parameter in the conditions with words `AND` or `OR`.
+Esta opción tiene dos significados. Primero, el programa reemplaza el [número de condiciones](../../coding/conditions.md#syntax) en el opcode `IF` con `AND` o `OR`. En segundo lugar, el programa puede compilar la construcción `IF..END` y calcular el parámetro `IF` necesario en las condiciones con las palabras `AND` u `OR`.
 
-### Ranges check
+### Chequeo de Rangos
 
-The number of local and global [variables](../../coding/variables.md) is limited. When this option is checked, the compiler checks if a variable fits the available range.
+El número de [variables](../../coding/variables.md) locales y globales es limitado. Cuando esta opción está marcada, el compilador verifica si una variable se ajusta al rango disponible.
 
-### Write opcodes
+### Escribir Opcodes
 
-If this option is unchecked, the disassembler uses available [classes](../../coding/classes.md) and [keywords](../../coding/keywords.md) instead of opcodes. In addition, simple math expressions have no opcodes. 
+Si esta opción no está marcada, el desensamblador usa [clases](../../coding/classes.md) disponibles y [palabras clave](../../coding/keywords.md) en lugar de opcodes. Además, las expresiones matemáticas simples no tienen códigos de operación.
 
-If the option is checked, all opcodes are present in the output file.
+Si la opción está marcada, todos los códigos de operación están presentes en el archivo de salida.
 
-### Replace mission numbers
+### Reemplazar Números de Misiones
 
-When this option is checked, the disassembler [replaces mission numbers](../features.md#replacing-mission-numbers-with-their-names) in `start_mission` with their names. The mission name is the label name defined in the file header. This name also could be used to quickly navigate to the mission code.
+Cuando esta opción está marcada, el desensamblador [reemplaza los números de misión](../features.md#replaceing-mission-numbers-with-their-names) en `start_mission` con sus nombres. El nombre de la misión es el nombre de la etiqueta definido en el header(encabezado) del archivo. Este nombre también podría usarse para navegar rápidamente al código de misión.
 
-### Insert original mission names
+### Insertar Nombre Original de Misión
 
-When this option is checked, the disassembler adds the [mission title](../features.md#custom-mission-titles) as a comment for the opcode `start_mission` and for the line `DEFINE MISSION` in the file header.
+Cuando esta opción está marcada, el desensamblador agrega el [título de la misión](../features.md#custom-mission-titles) como un comentario para el opcode `start_mission` y para la línea `DEFINE MISSION` en el header del archivo.
 
-### Add extra info to SCM
+### Agregar información adicional a SCM
 
-If this option is checked the compiler adds extra information at the end of the resulting file. This info is used later when this file gets disassembled to restore the source closer to the original. The following data is stored: 
+Si esta opción está marcada, el compilador agrega información adicional al final del archivo resultante. Esta información se usa más tarde cuando este archivo se desarma para restaurar la fuente más cerca del original. Se almacenan los siguientes datos:
 
-* [HEX..END](../../coding/hex..end.md) constructs offsets
-* [global variables](../../coding/variables.md#global-variables) names
-* full source code (use [$NOSOURCE](../../coding/directives.md#usdnosource) to disable)
-* current [edit mode](../../../edit-modes/README.md)
+* constructor de posiciones [HEX..END](../../coding/hex..end.md)¿
+* nombres de [variables globales](../../coding/variables.md#global-variables)
+* código fuente completo (use [$NOSOURCE](../../coding/directives.md#usdnosource) para desabilitada)
+* [modo de edición](../../edit-modes/README.md) actual
 
 {% hint style="info" %}
-The file compiled with the extra information can not be open in Sanny Builder prior to v3.00 (unless the `ignore_unknown` [option](../console.md#ignore_unknown) is enabled).
+El archivo compilado con la información adicional no se puede abrir en Sanny Builder antes de la versión 3.00 (a menos que la [opción](../console.md#ignore_unknown) de `ignore_unknown` esté habilitada).
 
-Starting from v3.8.0 the disassembler can [ignore extra information](../console.md#skip_extra_info).
+A partir de v3.8.0, el desensamblador puede [ignorar información adicional](../console.md#skip_extra_info).
 {% endhint %}
 
 <script src="../../../js/main.min.js"></script>
