--- a/es/editor/options/hotkeys.html
+++ b/es/editor/options/hotkeys.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Hotkeys</title>
+  <title>Atajos del Teclado</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +13,6 @@
 ![](../../img/options-hotkeys-en.png)
 :::
 
-Some [hotkeys](../hotkeys.md) are customizable for your comfort. You may set up new keyboard shortcuts for the IDE tools, editor actions and some other features.
+Algunas [atajos del teclado](../hotkeys.md) son personalizables para su comodidad. Puede configurar nuevos atajos de teclado para las herramientas del IDE, las acciones del editor y algunas otras funciones.
 
 <script src="../../../js/main.min.js"></script>
