--- a/en/editor/options/theme-editor.html
+++ b/en/editor/options/theme-editor.html
@@ -43,8 +43,8 @@ Available `style` elements are: **B** – bold, **I** – italic, **U** – unde
 * [Directives ](../../coding/directives.md)– a command starting with `{$`
 * [Constants](../../coding/constants.md) – identifiers, declared within the `CONST..END` construct. See also [Semantic highlighting](editor.md#editor-configuration).
 
-<div class="info">
+:::info
 The highlighting configuration is also used when the code source is saved into the `RTF` or `HTML` formats.
-</div>
+:::
 
 <script src="../../../js/main.min.js"></script>
