--- a/es/README.html
+++ b/es/README.html
@@ -15,7 +15,7 @@ Incluye un desensamblador que permite al usuario final transformar los scripts d
 
 Sanny ofrece una sintaxis de código avanzada que es similar a los lenguajes de programación existentes. Esta sintaxis incluye [clases modificables](coding/classes.md), [palabras clave](coding/keywords.md) y declaraciones de alto nivel. Le recomendamos que continúe leyendo y explore completamente la documentación para obtener más información sobre SB y sus capacidades. Proporcionamos una gran cantidad de información que lo ayudará a iniciarse en la codificación de misiones.
 
-## Instalación y actualizaciones
+## Instalación y Actualizaciones
 
 Ejecute el instalador y siga sus instrucciones. Durante la instalación, puede seleccionar opcionalmente el directorio del juego con el que planea trabajar, asociar archivos con la extensión `.scm` con Sanny Builder e instalar la [biblioteca CLEO](https://cleo.li/). Siempre puede actualizar esta configuración en las [opciones del programa](editor/options/README.md).
 
