--- a/en/coding/loops.html
+++ b/en/coding/loops.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-A **loop **is a statement which allows code to be repeatedly executed. Sanny Builder supports three kinds of controls loops: [for](#FOR..END), [while](#WHILE..END), [repeat](#REPEAT..UNTIL).
+A **loop** is a statement which allows code to be repeatedly executed. Sanny Builder supports three kinds of controls loops: [for](#FOR..END), [while](#WHILE..END), [repeat](#REPEAT..UNTIL).
 
 ## FOR..END
 
@@ -22,7 +22,7 @@ Syntax:\
 \
 `<loop variable>` - a [variable](variables.md) used as a counter for iterations\
 `<initial value>` - a value of the loop variable before the first iteration (any value including a [model identifier](data-types.md#model-names))\
-`TO` or `DOWNTO`** **- increment or decrement the loop variable between iterations\
+`TO` or `DOWNTO` - increment or decrement the loop variable between iterations\
 `<final value>` - a value of the loop variable after the last iteration (any value including a model identifier)\
 `<step>` - an optional value the loop variable will be incremented or decremented with between iterations. By default it is equal to `1`.
 
